<resources>
    <string name="app_name">JUEGOS</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_juego">Juegos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del Juego</string>
    <string name="msg_categoria">Categoria</string>
    <string name="msg_calificacion">Calificacion</string>
    <string name="msg_tamaño">Tamaño</string>
    <string name="bt_agregar">Agregar Juego</string>
    <string name="msg_imagen">Imagen del Juego</string>
    <string name="msg_juego_agregado">Juego Agregado</string>
    <string name="msg_faltan_datos">Faltan Datos</string>
    <string name="msg_agregar_juego">Agregar Juego</string>

</resources>