<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddJuegoFragment" >

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:text="@string/msg_nombre"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:text="@string/msg_categoria"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_calificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:text="@string/msg_calificacion"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_tamaño"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:text="@string/msg_tamaño"
        android:autofillHints="" />

    <Button
        android:id="@+id/bt_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_agregar" />

</LinearLayout>